--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import load_model\n",
     "from ipywidgets import interact\n",
@@ -19,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,8 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def predict(time, charge_weight):\n",
@@ -43,17 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "def plot_points(charge_weight):\n",
-    "    time_axis = np.arange(0, 4000, 10)\n",
+    "    time_axis = np.arange(0, 4000, 200)\n",
     "    v, r = np.array([predict(time, charge_weight) for time in time_axis]).transpose()\n",
     "\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "    fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True)\n",
     "\n",
     "    ax1.plot(time_axis, v)\n",
     "    ax1.set_title(\"v\")\n",
@@ -68,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0755e36a92564f35ad9a0487d1ea920c"
+       "model_id": "da8485ba870c4d3891f9458952fc7d9a"
       }
      },
      "metadata": {},
@@ -86,13 +95,13 @@
        "<function __main__.plot_points>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "interact(plot_points, charge_weight=(0, 3.3, 0.1))"
+    "interact(plot_points, charge_weight=(0, 5, 0.01))"
    ]
   },
   {
