add titles and padding to subplots

--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -42,6 +42,7 @@
    },
    "outputs": [],
    "source": [
+    "@np.vectorize\n",
     "def predict(time, charge_weight):\n",
     "    prediction = model.predict(np.array([[time / 4000.0, charge_weight / 3.3]]))[0]\n",
     "    velocity = prediction[0] * 399.99\n",
@@ -60,18 +61,23 @@
    "source": [
     "def plot_points(charge_weight):\n",
     "    time_axis = np.arange(0, 4000, 200)\n",
-    "    v, r = np.array([predict(time, charge_weight) for time in time_axis]).transpose()\n",
+    "    v, r = predict(time_axis, charge_weight)\n",
     "\n",
     "    fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True)\n",
+    "    plt.suptitle(f\"Velocity and Distance over time with a {charge_weight} kg charge\", y=1.05, fontweight=\"bold\")\n",
     "\n",
     "    ax1.plot(time_axis, v)\n",
-    "    ax1.set_title(\"v\")\n",
+    "    ax1.set_title(\"$v(t)$\")\n",
     "    ax1.set_ylim(0, 450)\n",
+    "    ax1.set_ylabel(\"Velocity (m/s)\")\n",
     "\n",
     "    ax2.plot(time_axis, r)\n",
-    "    ax2.set_title(\"r\")\n",
+    "    ax2.set_title(\"$r(t)$\")\n",
     "    ax2.set_ylim(0, 1500)\n",
+    "    ax2.set_xlabel(\"Time (milliseconds)\")\n",
+    "    ax2.set_ylabel(\"Distance (m)\")\n",
     "\n",
+    "    plt.tight_layout(pad=1.5)\n",
     "    plt.show()"
    ]
   },
@@ -83,7 +89,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da8485ba870c4d3891f9458952fc7d9a"
+       "model_id": "f99b08b070954a369524b74663b205b9"
       }
      },
      "metadata": {},
