prettier plot theme and aspect ratio

--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -19,6 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "plt.style.use('ggplot')\n",
+    "\n",
     "# T       M_C  M_S    V       R\n",
     "# 4000.0, 3.3, 10.63, 399.99, 1431.04435815"
    ]
@@ -63,7 +65,7 @@
     "    time_axis = np.arange(0, 4000, 200)\n",
     "    v, r = predict(time_axis, charge_weight)\n",
     "\n",
-    "    fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True)\n",
+    "    fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True, figsize=(6, 8))\n",
     "    plt.suptitle(f\"Velocity and Distance over time with a {charge_weight} kg charge\", y=1.05, fontweight=\"bold\")\n",
     "\n",
     "    ax1.plot(time_axis, v)\n",
@@ -89,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f99b08b070954a369524b74663b205b9"
+       "model_id": "7eec34e776a941c6bdcd02100e773b87"
       }
      },
      "metadata": {},
