--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# HARRY GET ON SIGNAL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The neural network used was a dense simple feedforward NN with three hidden layers of 10, 20, and 10 neurons respectively. The input and output layers consist of two neurons each, one for each input. "
    ]
   },
