--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -1,22 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# HARRY GET ON SIGNAL"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The neural network used was a dense simple feedforward NN with three hidden layers of 10, 20, and 10 neurons respectively. The input and output layers consist of two neurons each, one for each input. "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,13 +19,15 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "plt.style.use('ggplot')\n",
+    "\n",
     "# T       M_C  M_S    V       R\n",
     "# 4000.0, 3.3, 10.63, 399.99, 1431.04435815"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -50,12 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "@np.vectorize\n",
     "def predict(time, charge_weight):\n",
     "    prediction = model.predict(np.array([[time / 4000.0, charge_weight / 3.3]]))[0]\n",
     "    velocity = prediction[0] * 399.99\n",
@@ -65,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -73,30 +62,38 @@
    "outputs": [],
    "source": [
     "def plot_points(charge_weight):\n",
-    "    time_axis = np.arange(0, 4000, 10)\n",
-    "    v, r = np.array([predict(time, charge_weight) for time in time_axis]).transpose()\n",
+    "    time_axis = np.arange(0, 4000, 200)\n",
+    "    v, r = predict(time_axis, charge_weight)\n",
     "\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "    fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True, figsize=(6, 8))\n",
+    "    plt.suptitle(f\"Velocity and Distance over time with a {charge_weight} kg charge\", y=1.05, fontweight=\"bold\")\n",
     "\n",
     "    ax1.plot(time_axis, v)\n",
-    "    ax1.set_title(\"v\")\n",
+    "    ax1.set_title(\"$v(t)$\")\n",
     "    ax1.set_ylim(0, 450)\n",
+    "    ax1.set_ylabel(\"Velocity (m/s)\")\n",
     "\n",
     "    ax2.plot(time_axis, r)\n",
-    "    ax2.set_title(\"r\")\n",
-    "    \n",
+    "    ax2.set_title(\"$r(t)$\")\n",
     "    ax2.set_ylim(0, 1500)\n",
+    "    ax2.set_xlabel(\"Time (milliseconds)\")\n",
+    "    ax2.set_ylabel(\"Distance (m)\")\n",
     "\n",
+    "    plt.tight_layout(pad=1.5)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {},
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7eec34e776a941c6bdcd02100e773b87"
+      }
+     },
      "metadata": {},
      "output_type": "display_data"
     },
@@ -106,13 +103,13 @@
        "<function __main__.plot_points>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "interact(plot_points, charge_weight=(0, 3.3, 0.1))"
+    "interact(plot_points, charge_weight=(0, 5, 0.01))"
    ]
   },
   {
