add WIP notebook

--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -2,32 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import load_model\n",
     "from ipywidgets import interact\n",
     "import matplotlib.pyplot as plt\n",
+    "import math\n",
     "import numpy as np\n",
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "# T       M_C  M_S    V       R\n",
-    "# 4000.0, 3.3, 10.63, 399.99, 1431.04435815"
+    "# t       angle            m    v       x        y\n",
+    "# 4000.0, 0.0626357297323, 3.3, 399.99, 1011.87, 19.28"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -38,32 +31,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "@np.vectorize\n",
-    "def predict(time, charge_weight):\n",
-    "    prediction = model.predict(np.array([[time / 4000.0, charge_weight / 3.3]]))[0]\n",
+    "def predict(time, angle, charge_weight):\n",
+    "    prediction = model.predict(np.array([[time / 4000.0, angle / 0.0626357297323, charge_weight / 3.3]]))[0]\n",
     "    velocity = prediction[0] * 399.99\n",
-    "    r = prediction[1] * 1431.04435815\n",
-    "    return velocity, r"
+    "    x = prediction[1] * 1011.87\n",
+    "    y = prediction[2] * 19.28\n",
+    "    return velocity, x, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def plot_points(charge_weight):\n",
+    "def plot_points(angle, charge_weight):\n",
     "    time_axis = np.arange(0, 4000, 200)\n",
-    "    v, r = predict(time_axis, charge_weight)\n",
+    "    v, x, y = predict(time_axis, angle, charge_weight)\n",
     "\n",
     "    fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True, figsize=(6, 8))\n",
     "    plt.suptitle(f\"Velocity and Distance over time with a {charge_weight} kg charge\", y=1.05, fontweight=\"bold\")\n",
@@ -73,25 +67,19 @@
     "    ax1.set_ylim(0, 450)\n",
     "    ax1.set_ylabel(\"Velocity (m/s)\")\n",
     "\n",
-    "    ax2.plot(time_axis, r)\n",
-    "    ax2.set_title(\"$r(t)$\")\n",
-    "    ax2.set_ylim(0, 1500)\n",
-    "    ax2.set_xlabel(\"Time (milliseconds)\")\n",
-    "    ax2.set_ylabel(\"Distance (m)\")\n",
-    "\n",
     "    plt.tight_layout(pad=1.5)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eec34e776a941c6bdcd02100e773b87"
+       "model_id": "f6d9a8f0ddc2439e8d4c9d240db54ad8"
       }
      },
      "metadata": {},
@@ -103,13 +91,13 @@
        "<function __main__.plot_points>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "interact(plot_points, charge_weight=(0, 5, 0.01))"
+    "interact(plot_points, angle=(0, math.pi / 2, 0.01), charge_weight=(0, 5, 0.01))"
    ]
   },
   {
