--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -2,15 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.models import load_model\n",
     "from ipywidgets import interact\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
     "import math\n",
     "import numpy as np\n",
+    "\n",
+    "%matplotlib notebook\n",
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
@@ -20,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -48,9 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -58,14 +62,21 @@
     "def plot_points(angle, charge_weight):\n",
     "    time_axis = np.arange(0, 4000, 200)\n",
     "    v, x, y = predict(time_axis, angle, charge_weight)\n",
-    "\n",
-    "    fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True, figsize=(6, 8))\n",
+    "    \n",
+    "    fig = plt.figure(figsize=(6, 8))\n",
     "    plt.suptitle(f\"Velocity and Distance over time with a {charge_weight} kg charge\", y=1.05, fontweight=\"bold\")\n",
-    "\n",
+    "    \n",
+    "    ax1 = fig.add_subplot(2, 1, 1)\n",
     "    ax1.plot(time_axis, v)\n",
     "    ax1.set_title(\"$v(t)$\")\n",
     "    ax1.set_ylim(0, 450)\n",
     "    ax1.set_ylabel(\"Velocity (m/s)\")\n",
+    "    \n",
+    "    ax2 = fig.add_subplot(2, 1, 2, projection='3d')\n",
+    "    ax2.set_xlabel(\"time (millisconds)\")\n",
+    "    ax2.set_ylabel(\"x distance (meters)\")\n",
+    "    ax2.set_\n",
+    "    ax2.plot(time_axis, x, y)\n",
     "\n",
     "    plt.tight_layout(pad=1.5)\n",
     "    plt.show()"
@@ -73,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6d9a8f0ddc2439e8d4c9d240db54ad8"
+       "model_id": "1ac21179e5a44956b162802bed4c6040"
       }
      },
      "metadata": {},
@@ -91,7 +102,7 @@
        "<function __main__.plot_points>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
