clean up execution counts

--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import load_model\n",
     "from ipywidgets import interact\n",
@@ -25,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -53,8 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -64,18 +71,18 @@
     "    v, x, y = predict(time_axis, angle, charge_weight)\n",
     "    \n",
     "    fig = plt.figure(figsize=(6, 8))\n",
-    "    plt.suptitle(f\"Velocity and Distance over time with a {charge_weight} kg charge\", y=1.05, fontweight=\"bold\")\n",
-    "    \n",
+    "\n",
     "    ax1 = fig.add_subplot(2, 1, 1)\n",
     "    ax1.plot(time_axis, v)\n",
     "    ax1.set_title(\"$v(t)$\")\n",
     "    ax1.set_ylim(0, 450)\n",
     "    ax1.set_ylabel(\"Velocity (m/s)\")\n",
+    "    ax1.set_xlabel(\"Time (milliseconds)\")\n",
     "    \n",
     "    ax2 = fig.add_subplot(2, 1, 2, projection='3d')\n",
-    "    ax2.set_xlabel(\"time (millisconds)\")\n",
+    "    ax2.set_xlabel(\"Time (millisconds)\")\n",
     "    ax2.set_ylabel(\"x distance (meters)\")\n",
-    "    ax2.set_\n",
+    "    ax2.set_zlabel(\"y distance (meters)\")\n",
     "    ax2.plot(time_axis, x, y)\n",
     "\n",
     "    plt.tight_layout(pad=1.5)\n",
@@ -84,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ac21179e5a44956b162802bed4c6040"
+       "model_id": "c2350f41af1f432f935433a0df2fe800"
       }
      },
      "metadata": {},
@@ -102,7 +109,7 @@
        "<function __main__.plot_points>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
