clean some stuff up

--- a/NN_Graphs.ipynb
+++ b/NN_Graphs.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -80,6 +80,7 @@
     "    ax1.set_xlabel(\"Time (milliseconds)\")\n",
     "    \n",
     "    ax2 = fig.add_subplot(2, 1, 2, projection='3d')\n",
+    "    ax2.set_title(\"$r(t)$\")\n",
     "    ax2.set_xlabel(\"Time (millisconds)\")\n",
     "    ax2.set_ylabel(\"x distance (meters)\")\n",
     "    ax2.set_zlabel(\"y distance (meters)\")\n",
@@ -91,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2350f41af1f432f935433a0df2fe800"
+       "model_id": "83ea738ed9b9445391bfdeb711a2da10"
       }
      },
      "metadata": {},
@@ -109,7 +110,7 @@
        "<function __main__.plot_points>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
